stretch img fix

--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@ input, select
     min-width: 2rem;
     overflow: hidden;
     margin-right: 2rem;
+    object-fit: contain;
 }
 .offcanvas-backdrop
 {
